--- a/src/views/media/media.html
+++ b/src/views/media/media.html
@@ -10,6 +10,14 @@
 <script type="text/javascript" src="../../../bundle/jquery-3.1.1.js"></script>
 <!--<script type="text/javascript" src="../../src/js/pages.js" hidden></script>-->
     <div>我校组织大班学生出去郊游</div>
+<div class="content-wrap" hidden="hidden">
+    <div id="title">IT入门</div>
+    <div class="test-area">~ 翬 ~</div>
+    <div class="img-container" id="content">
+        <div class="img-11"></div>
+        <img src="../../../imgDir/img-12.jpg" class="img-content"/>
+    </div>
+</div>
 </body>
 </html>
 <script type="text/javascript">
